--- a/src/Views/Common/home.twig
+++ b/src/Views/Common/home.twig
@@ -1,25 +1,9 @@
-{#<?php 
-/**
- * Главная страница с миниатюрками 
- * 
- * Дизайн из фигмы
- * Миниатюрные значки?
- * 
- * if(get)
- * просто отображаю переданные из контроллера миниатюрки
- * if(post)
- * шлётся id выбранной миниатюры в контроллер, пользователь переходит в контроллер конкретного задания. 
- * 
- * 
- * 
- * 
- * 
- * 
- * 
- * 
- * 
- */
- alabama#}
 <div class="container">
-	<p>JUST SOME HOME PAGE</p>
+	<div class="row h-100">
+		<div class="col-12 d-flex justify-content-center">
+			<div class="main-page">
+				<p>Здесь пока ничего нет</p>
+			</div>
+		</div>
+	</div>
 </div>
