--- a/src/Views/Users/login.twig
+++ b/src/Views/Users/login.twig
@@ -1,5 +1,5 @@
 <div class="container row d-flex justify-content-center mx-auto w-75">
-	<div class="col-md-12 d-flex justify-content-center border rounded w-75 mt-5 mb-5 mx-auto">
+	<div class="col-md-12 d-flex justify-content-center border rounded w-75 mt-5 mb-5 mx-auto auth-form">
 		<div class="w-50">
 			<div class="col d-flex justify-content-center mt-5 mb-3">
 				<h2>Вход</h2>
