--- a/src/Views/main.twig
+++ b/src/Views/main.twig
@@ -8,49 +8,53 @@
 		<link rel="stylesheet" href="public/css/style.css">
 		<title>{{ title }}</title>
 	</head>
-	{# <body class="d-flex flex-column min-vh-100"> #}
 	<body>
-		<header>
-			<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
-				<div class="container-fluid">
-					<div class="collapse navbar-collapse">
-						<ul class="navbar-nav mb-2 mb-lg-0">
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="{{baseUrl}}">Главная</a>
-							</li>
-							<li class="nav-item">
-								<a class="nav-link active" aria-current="page" href="{{baseUrl}}create">Создать упражнение</a>
-							</li>
-						</ul>
-						{% if user == null %}
-							<ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+		<div class="main-part">
+			<header>
+				<nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+					<div class="container-fluid">
+						<div class="collapse navbar-collapse">
+							<ul class="navbar-nav mb-2 mb-lg-0">
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="{{baseUrl}}login">Войти</a>
+									<a class="nav-link active" aria-current="page" href="{{baseUrl}}">Главная</a>
 								</li>
 								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="{{baseUrl}}register">Зарегистрироваться</a>
+									<a class="nav-link active" aria-current="page" href="{{baseUrl}}create">Создать упражнение</a>
 								</li>
 							</ul>
-						{% else %}
-							<ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="{{baseUrl}}logout">Выйти</a>
-								</li>
-								<li class="nav-item">
-									<a class="nav-link active" aria-current="page" href="{{baseUrl}}user/{{user.id_user}}">Личный кабинет</a>
-								</li>
-							</ul>
-						{% endif %}
+							{% if user == null %}
+								<ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+									<li class="nav-item">
+										<a class="nav-link active" aria-current="page" href="{{baseUrl}}login">Войти</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active" aria-current="page" href="{{baseUrl}}register">Зарегистрироваться</a>
+									</li>
+								</ul>
+							{% else %}
+								<ul class="navbar-nav mb-2 mb-lg-0 ms-auto">
+									<li class="nav-item">
+										<a class="nav-link active" aria-current="page" href="{{baseUrl}}logout">Выйти</a>
+									</li>
+									<li class="nav-item">
+										<a class="nav-link active" aria-current="page" href="{{baseUrl}}user/{{user.id_user}}">Личный кабинет</a>
+									</li>
+								</ul>
+							{% endif %}
+						</div>
 					</div>
-				</div>
-			</nav>
-		</header>
-		<main>
-			{{ content }}
-		</main>
-		{# <footer class="d-flex justify-content-center mt-auto text-light bg-dark pt-2 pb-2">
-					Министерство образования - &#169; 2023
-				</footer> #}
+				</nav>
+			</header>
+			<main>
+				{{ content }}
+			</main>
+		</div>
+		<footer class="footer-part">
+			<div class="d-flex justify-content-center text-light bg-dark pt-2 pb-2">
+				<p class="mb-0">Министерство образования - &#169; 2023</p>
+			</div>
+		</footer>
 		<script type="text/javascript" src="public/js/bootstrap.bundle.min.js"></script>
+		<script type="text/javascript" src="public/js/jquery.min.js"></script>
 	</body>
 </html>
